# pythonProject10_07

./: README.md  main.py  pyproject.toml
data/: input_text.txt
src/: masks.py  processing.py  widget.py
tests/: conftest.py  test_masks.py  test_processing.py  test_widget.py  tests.py
